--- a/README
+++ b/README
@@ -24,6 +24,7 @@ Changelog
 Author
 ======
 Jonas Schnelli / include7 AG - www.include7.ch
+Vladimir Boichentsov  - http://www.developers-life.com/uicolor-from-hex.html
 
 
 		     	_            __          __  _____
